@@ -1,3 +1,9 @@
+Thu May 17 13:03:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * XSC/Parser.cpp:
+          for a complex type restriction we now get into a new helper method
+          which is currently empty
+
 Wed May 16 19:20:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC/Parser.cpp:
